<resources>
    <string name="app_name">weixin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat">聊天</string>
    <string name="address_book">通讯录</string>
    <string name="find">发现</string>
    <string name="me">我</string>
    <string name="give_service_to">服务</string>
    <string name="settings">设置</string>
    <string name="collect">收藏</string>
    <string name="circle_of_friends">朋友圈</string>
    <string name="name">微信名</string>
    <string name="number">微信号：12345</string>
    <string name="icon">选择头像</string>
    <string name="settings_name">设置微信名</string>
    <string name="_12345">12345</string>
    <string name="number2">微信号</string>
</resources>