<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MeActivity"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/rl_give_service_to"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/frame2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/iv_baseline_autorenew"
            android:paddingStart="15dp"
            android:text="@string/icon"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />
        <ImageView
            android:id="@+id/iv_baseline_autorenew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/box"
            android:layout_toStartOf="@+id/iv_arrow"/>

        <ImageView
            android:id="@+id/iv_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/baseline_arrow" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_settings_name"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/frame2">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/name"
        android:paddingStart="15dp"
        android:text="@string/name"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/iv_arrow2"
        android:text="@string/name"
        android:layout_centerVertical="true"/>

    <ImageView
        android:id="@+id/iv_arrow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:src="@drawable/baseline_arrow" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_settings_number"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/frame2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:paddingStart="15dp"
            android:text="@string/number2"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/iv_arrow3"
            android:text="@string/_12345"
            android:layout_centerVertical="true"/>

        <ImageView
            android:id="@+id/iv_arrow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/baseline_arrow" />
    </RelativeLayout>


</LinearLayout>