<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".fragment.MeFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_modify"
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:background="@drawable/frame">

            <ImageView
                android:id="@+id/iv_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/box" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/iv_box"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:text="@string/name"
                    android:textSize="25sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:text="@string/number"
                    android:textSize="15sp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/baseline_arrow" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_give_service_to"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/frame2">

            <ImageView
                android:id="@+id/iv_baseline_autorenew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/baseline_autorenew" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/iv_baseline_autorenew"
                android:paddingStart="15dp"
                android:text="@string/give_service_to"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/baseline_arrow" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_circle_of_friends"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/frame2">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/photo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/photo"
                android:paddingStart="15dp"
                android:text="@string/circle_of_friends"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/baseline_arrow" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_settings"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/frame2">

            <ImageView
                android:id="@+id/iv_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/settings" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/iv_settings"
                android:paddingStart="15dp"
                android:text="@string/settings"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/baseline_arrow" />
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>